# UDM-Pro-ONVIF-Diagnostics

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
onvif_compare/: __init__.py  __main__.py  capture.py  main.py  models.py  onvif_client.py  pcap.py  report.py  soap.py  timeline.py  util.py
tests/: test_capture.py  test_onvif_client.py  test_pcap.py  test_report.py  test_soap.py  test_timeline.py
tests/fixtures/: empty_pull.xml  make_pcaps.py  motion_false.xml  motion_true.xml  notification_no_message.xml  notification_no_utctime.xml  notification_wrong_item_name.xml  notification_wrong_namespace.xml  pullmessages.xml  soap_fault.xml  subscription.xml
