[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "onvif-compare"
version = "0.1.0"
description = "ONVIF PullPoint Forensic Comparator — determines whether a camera delivers motion notifications to UniFi Protect."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "paramiko>=3.0",
    "onvif-zeep>=0.2.12",
    "lxml>=4.9",
    "scapy>=2.5",
    "zeep>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
onvif-compare = "onvif_compare.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["onvif_compare*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
